task-9: method for finding best truant in group was updated